--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* Estilos generales */
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
@@ -10,6 +9,7 @@ header {
     background-color: #333;
     color: #fff;
     text-align: center;
+    padding: 20px;
 }
 
 header h1 {
@@ -31,7 +31,6 @@ footer {
     bottom: 0;
 }
 
-/* Botones de contacto personalizados */
 .btn-whatsapp {
     background-color: #25d366 !important;
     border-radius: 25px !important;
@@ -47,7 +46,19 @@ footer {
     border-radius: 25px !important;
 }
 
-/* Caja de información */
+.btn-light.nav-link {
+    background-color: #ffffff;
+    color: #0d6efd;
+    border: 1px solid #ced4da;
+    text-decoration: none;
+    transition: all 0.3s ease;
+}
+
+.btn-light.nav-link:hover {
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
+}
+
 .info-box {
     background-color: #e9e9e9;
     border-radius: 10px;
@@ -56,26 +67,23 @@ footer {
     margin-top: 40px;
 }
 
-/* Íconos de redes sociales */
 .social-icon {
     font-size: 24px;
 }
 
-/* Aumenta el tamaño de fuente de h5 específicamente en tarjetas de la clase .card */
 .card .card-title {
-    font-size: 1.6rem !important; /* Aumenta el tamaño de fuente */
+    font-size: 1.6rem !important;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
-/* Aumenta el tamaño de fuente para todos los elementos h5 en el documento */
 h5 {
-    font-size: 1.5rem; /* Ajusta a tu preferencia */
+    font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
 p {
-    font-size: 1.2rem; /* Aumentado el tamaño de fuente */
+    font-size: 1.2rem;
     line-height: 1.6;
 }
