--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
+    font-size: 18px; 
 }
 
 header {
@@ -14,6 +15,15 @@ header {
 
 header h1 {
     margin: 0;
+    font-size: 2.2rem;
+    padding: 10px;
+}
+
+section h2 {
+    font-size: 2.2rem; 
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 20px;
 }
 
 section {
@@ -72,19 +82,28 @@ footer {
 }
 
 .card .card-title {
-    font-size: 1.6rem !important;
+    font-size: 1.8rem !important;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
 h5 {
-    font-size: 1.5rem;
+    font-size: 1.6rem; 
     font-weight: bold;
     margin-bottom: 10px;
 }
 
 p {
-    font-size: 1.2rem;
-    line-height: 1.6;
+    font-size: 1.22rem; 
+    line-height: 1.7;
 }
 
+.nav-pills .nav-item .nav-link {
+    font-size: 1rem; 
+    padding: 10px 20px;
+    font-weight: bold; 
+}
+
+.nav-pills .nav-item {
+    margin: 0 10px;
+}
